--- a/index.html
+++ b/index.html
@@ -15,19 +15,21 @@
     <main class="main">
 
         <div class="titles">
-            <h1 class="apagado-h1">Apagado</h1>
-            <h1 class="encendido-h1 active">Encendido</h1>
+            <h1 class="apagado-h1"   id="offh1">Apagado</h1>
+            <h1 class="encendido-h1" id="onh1">Encendido</h1>
         </div>
 
         <div class="light">
-            <i class="fa-solid fa-lightbulb"></i>
+            <i class="fa-solid fa-lightbulb" id="light"></i>
         </div>
 
         <div class="btns">
-            <button class="btn-encender">Encender</button>
-            <button class="btn-apagar">Apagar</button>
+            <a href=""><button class="btn-encender" id="onBtn">Encender</button></a>
+            <a href=""><button class="btn-apagar" id="offBtn">Apagar</button></a>
         </div>
         
     </main>
+
+    <script src="./src/script.js"></script>
 </body>
 </html>
