Adding arduino code

--- a/data/index.html
+++ b/data/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Sans:opsz,wght@9..40,500&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="./src/style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
     <main class="main">
@@ -30,6 +30,6 @@
         
     </main>
 
-    <script src="./src/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
